--- a/index.html
+++ b/index.html
@@ -6,9 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="JavaScript PokeDex">
     <link rel="stylesheet" href="style.css">
-    <title>PokeDex</title>
+    <title>POKÉDEX</title>
 </head>
 <body>
-    
+    <h1>POKÉDEX</h1>
+    <div id="container">
+<!-- Example of a single Pokemon card -->
+
+<!-- <section class="pokemon">
+<div class="img-container">
+    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/shiny/25.png" alt="Pikachu">
+</div>
+<h3 class="name">PIKACHU</h3>
+</section> -->
+
+    </div>
+    <!-- Link to Axios -->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <!-- Link to JS -->
+    <script src="app.js"></script>
 </body>
 </html>
